[tool.poetry]
name = "pubsub-microservices"
version = "0.1.0"
description = "Sample application code for pub/sub design"
authors = ["cfloressuazo1 <cfloressuazo@gmail.com>"]
readme = "README.md"
packages = [
    { include = "staff", from = "src" },
    { include = "chef", from = "src" },
    { include = "management", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
Flask = {extras = ["async"], version = "^3.0.0"}
redis = "^5.0.1"
uwsgi = "^2.0.22"
flask-sqlalchemy = "^3.1.1"
flask-caching = "^2.0.2"
flask-socketio = "^5.3.6"
celery = "^5.3.4"
flask-redis = "^0.4.0"
requests = "^2.31.0"
aiohttp = "^3.8.6"
flask-user = {git = "https://github.com/cesarqdt/Flask-User.git"}
flask-migrate = "^4.0.5"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
